# MathMate

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
.history/: .gitignore_20251016134000  .gitignore_20251016134001  pyproject_20251016124005.toml  pyproject_20251016124256.toml  pyproject_20251016124346.toml
.history/app/: api_server_20251016131405.py  config_20251016124724.py  config_20251016124750.py  config_20251016124755.py  config_20251016124757.py  config_20251016130013.py  config_20251016130050.py  config_20251016130126.py  config_20251016130138.py  config_20251016130355.py  config_20251016130408.py  config_20251016130437.py  config_20251016130525.py  config_20251016130605.py  config_20251016130745.py  config_20251016130829.py  config_20251016131335.py
.history/app/agents/: protocols_20251016132710.py  protocols_20251016132720.py  protocols_20251016132724.py  protocols_20251016132733.py  protocols_20251016132738.py  textbook_rag_20251016124005.py  textbook_rag_20251016125915.py  (+21 more)
app/: api_server.py  config.py  copilot_server.py  main.py  requirements.txt
app/agents/: __init__.py  math_agent.py  ocr_agent.py  protocols.py  textbook_rag.py  video_rag.py
app/graph/: __init__.py  builder.py  runtime.py  state.py  supervisor.py
app/utils/: __init__.py  images.py  logging.py
frontend/: package.json  server.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/runtime/: server.mjs
tests/: test_math_agent.py  test_ocr_agent.py  test_textbook_rag.py
textbook_embed/vector/: faiss_index.index
